css basic complete

--- a/CSS_Basic/1_index.html
+++ b/CSS_Basic/1_index.html
@@ -41,6 +41,101 @@
     <div id="box-model">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit dolor quia quam consectetur
         eligendi optio earum, deserunt sed rerum aspernatur similique! Nemo nihil dignissimos dolor laboriosam in id
         voluptate laudantium. Hic fugit nulla quos molestias porro? At inventore perferendis provident?</div>
+    <div class="categories">
+        <h2>categories</h2>
+        <ul>
+            <li><a href="#"> category 1</a></li>
+            <li><a href="#"> category 2</a></li>
+            <li><a href="#"> category 3</a></li>
+            <li><a href="#"> category 4</a></li>
+            <li><a href="#"> category 5</a></li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <!-- form ko beautify kaise kare -->
+    <form class="my-form">
+        <div class="form-group">
+            <label> Name </label>
+            <input type="text" class="input-type">
+
+        </div>
+        <div class="form-group">
+            <label> Email </label>
+            <input type="email" class="input-type">
+
+        </div>
+        <div class="form-group">
+            <label> Message </label>
+            <textarea class="input-type"></textarea>
+        </div>
+        <button class=" button">Submit</button>
+    </form>
+    <br>
+    <hr>
+    <br>
+    <div class="block">
+        <h2>Heading 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, facere quidem quod distinctio ut illo nisi.
+        </p>
+    </div>
+
+    <div class="block">
+        <h2>Heading 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, facere quidem quod distinctio ut illo nisi.
+        </p>
+    </div>
+    <div class="clearfix"></div>
+    <hr>
+    <br>
+    <div id="main_block">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia unde placeat illo illum incidunt rerum
+            corrupti natus iste ab reprehenderit.</p>
+    </div>
+    <div id="side_bar">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores fugiat facilis similique recusandae dolorem
+            dolor saepe, deleniti veniam accusamus illo!</p>
+    </div>
+    <div class="clearfix"></div>
+    <hr>
+    <br>
+    <!-- Positioning concept -->
+    <div class="position-box">
+        <h1>CSS</h1>
+        <h2>Crash Course</h2>
+    </div>
+    <hr>
+    <br>
+    <br>
+    <!-- fixed -button concept -->
+    <button class="button fixed-button">Fixed Button</button>
+    <hr>
+    <br>
+    <!-- pseudo properties -->
+     <ul class="my-list">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
+     </ul>
+    <hr>
+    <br>
+    <ul class="dynamic-list">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
+        <li>item 7</li>
+        <li>item 8</li>
+     </ul>
+    <hr>
+    <br>
 
 </body>
 
